Criação de section e add img

--- a/index.html
+++ b/index.html
@@ -1,12 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
+    <meta name="author"content="Victoria S">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keyworks"content="Comida de boteco, boteco, fome">
+    <meta name="description"content="Comida boa !!!">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="">
+    <title>Comida de Boteco</title>
 </head>
 <body>
-    
+<header>
+    <nav>
+        <a href="">LOGO</a>"
+    </nav>
+        <ul>
+            <li>coxinhas</li>
+            <li>bolovos</li>
+            <li>pastéis</li>
+            <li>extras</li>
+            <li>bebidas</li>
+            <li>sobremesas</li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <div>
+        <h1>Bolovo de boteco</h1>
+        <p>Venha experimentar</p>
+        <img src="assets/Imagens/Bolovo.jpg" alt="Bolovo">
+    </div>
+</main>
+<footer>
+<div>
+    <div>
+        <ol>
+            <li>+ info</li>
+            <li>sobre</li>
+            <li>contatos</li>
+            <li>redes sociais</li>
+            <li>Trabalhe conosco</li>
+        </ol>
+    </div>
+        <ol>
+            <li>+ info</li>
+            <li>sobre</li>
+            <li>contatos</li>
+            <li>redes sociais</li>
+            <li>Trabalhe conosco</li>
+        </ol>
+    <div>
+        <div>
+            <ul>   
+            <li>+ info</li>
+                <li>sobre</li>
+                <li>contatos</li>
+                <li>redes sociais</li>
+                <li>Trabalhe conosco</li>
+             <ul>
+
+        </div>
+
+    </div>
+</div>
+</footer>
+  
 </body>
 </html>
